CHANGES.txt - 08/19/2002
------------------------

CHANGES IN CUPS V1.1.16

	- The scheduler did not properly handle backslashes in
	  banner files; it incorrectly assumed that "\c" should
	  always be replaced by "c", instead of only looking for
	  "\{" and replacing it by "{".
	- The texttops filter didn't handle prettyprint=no.
	- The text and HP-GL/2 filters didn't check for other
	  common duplex option names like cupsMarkOptions() did.
	- "lpoptions -x printer" no longer clears the "default
	  printer" status of the printer.
	- cupsTempFd() now stops trying to create a temporary
	  file after 1000 tries, and aborts on any error other
	  than EEXIST.  This should prevent lp/lpr hangs due to
	  a bad or missing temporary directory.
	- The lpadmin command did not send the right URI to the
	  scheduler when setting options on classes.  This
	  caused a client-error-bad-request error.
	- The CUPS API convenience functions would attempt to
	  connect to the remote server name in a
	  "printer@server" printer name instead of dealing with
	  the default (usually local) server.  Aside from
	  causing user confusion, the remote server name might
	  not be resolved properly, causing further problems.
	- "lp -q" would cause the "lp" command to segfault, as
	  the program would try to print the option letter that
	  caused the error using the wrong index into the
	  command-line; bugfix from Debian.
	- Fixed a minor inconsistancy in the encoding of boolean
	  attributes from printer options in
	  cupsEncodeOptions().
	- Added a FilterNice directive which sets the priority
	  of job filter processes that are run by the scheduler.
	- Added Solaris x86 USB printer support.
	- The USB backend now reports both the ulpt and unlpt
	  devices under *BSD.
	- The "lpstat -o" command would truncate the
	  "printer-jobid" string if it was longer than 21
	  characters.
	- The PJL-based MIME type rules now look in the first
	  1024 bytes instead of just the first 512 bytes to find