@@ -1,6 +1,6 @@
 #!/bin/sh
 #
-# "$Id: cups.sh.in,v 1.20 2002/06/12 17:06:42 mike Exp $"
+# "$Id: cups.sh.in,v 1.21 2002/08/20 20:11:24 mike Exp $"
 #
 #   Startup/shutdown script for the Common UNIX Printing System (CUPS).
 #
@@ -47,10 +47,21 @@
 case "`uname`" in
 	IRIX*)
 		IS_ON=/sbin/chkconfig
+
+		if $IS_ON verbose; then
+			ECHO=echo
+		else
+			ECHO=:
+		fi
+		ECHO_OK=:
+		ECHO_ERROR=:
 		;;
 
 	*BSD*)
         	IS_ON=:
+		ECHO=echo
+		ECHO_OK=:
+		ECHO_ERROR=:
 		;;
 
 	Darwin*)
@@ -61,67 +72,59 @@ case "`uname`" in
 		fi
 
         	IS_ON=:
+		ECHO=ConsoleMessage
+		ECHO_OK=:
+		ECHO_ERROR=:
 		;;
 
 	Linux*)
 		IS_ON=/bin/true
+		if test -f /etc/init.d/functions; then
+			. /etc/init.d/functions
+			ECHO=echo
+			ECHO_OK="echo_success"
+			ECHO_ERROR="echo_failure"
+		else
+			ECHO=echo
+			ECHO_OK=:
+			ECHO_ERROR=:
+		fi
 		;;
 
 	*)
 		IS_ON=/bin/true
+		ECHO=echo
+		ECHO_OK=:
+		ECHO_ERROR=:
 		;;
 esac
 
 #### OS-Independent Stuff
 
-if test ! -f /etc/localtime; then
-	#
-	# Set the timezone, if possible...  This allows the
-	# scheduler and all child processes to know the local
-	# timezone when reporting dates and times to the user. 
-	# If no timezone information is found, then Greenwich
-	# Mean Time (GMT) is assumed.
-	#
-	# We only set the timezone when there is no
-	# /etc/localtime file, which is normally used instead of
-	# an environment variable under *BSD...
-	#
+#
+# Set the timezone, if possible...  This allows the
+# scheduler and all child processes to know the local
+# timezone when reporting dates and times to the user. 
+# If no timezone information is found, then Greenwich
+# Mean Time (GMT) will probably be used.
+#
 
-	for file in /etc/TIMEZONE /etc/rc.config /etc/sysconfig/clock; do
-		if test -f $file; then
-	        	. /etc/TIMEZONE
-		fi
-	done
-
-	if test "x$ZONE" != x; then
-		TZ="$ZONE"
+for file in /etc/TIMEZONE /etc/rc.config /etc/sysconfig/clock; do
+	if test -f $file; then
+	        . $file
 	fi
+done
 
-	if test "x$TIMEZONE" != x; then
-		TZ="$TIMEZONE"
-	fi
-
-	if test "x$TZ" = x; then
-		TZ=GMT
-	fi
-
-	export TZ
+if test "x$ZONE" != x; then
+	TZ="$ZONE"
 fi
 
-#
-# The verbose flag controls the printing of the names of
-# daemons as they are started.  Currently always echos for
-# all but IRIX, which can configure verbose bootup messages.
-#
+if test "x$TIMEZONE" != x; then
+	TZ="$TIMEZONE"
+fi
 
-if test "`uname`" = "Darwin"; then
-	ECHO=ConsoleMessage
-else
-	if $IS_ON verbose; then
-		ECHO=echo
-	else
-		ECHO=:
-	fi
+if test "x$TZ" != x; then
+	export TZ
 fi
 
 #
@@ -163,25 +166,30 @@ case $1 in
 				prefix=@prefix@
 				exec_prefix=@exec_prefix@
 				@sbindir@/cupsd
+				if test $? != 0; then
+					$ECHO_FAIL
+					$ECHO "cups: unable to $1 scheduler."
+					exit 1
+				fi
 			fi
-			$ECHO "cups: scheduler ${1}ed."
-		else
-			$ECHO "cups: scheduler stopped."
+			$ECHO_OK
+			$ECHO "cups: ${1}ed scheduler."
 		fi
 		;;
 
 	stop)
 		if test "$pid" != ""; then
 			kill $pid
-			$ECHO "cups: scheduler stopped."
+			$ECHO_OK
+			$ECHO "cups: stopped scheduler."
 		fi
 		;;
 
 	status)
 		if test "$pid" != ""; then
-			echo "cups: Scheduler is running."
+			echo "cups: scheduler is running."
 		else
-			echo "cups: Scheduler is not running."
+			echo "cups: scheduler is not running."
 		fi
 		;;
 
@@ -199,5 +207,5 @@ exit 0
 
 
 #
-# End of "$Id: cups.sh.in,v 1.20 2002/06/12 17:06:42 mike Exp $".
+# End of "$Id: cups.sh.in,v 1.21 2002/08/20 20:11:24 mike Exp $".
 #
